@@ -17,10 +17,10 @@ package org.craftercms.studio.impl.v2.upgrade.operations.file;
 
 import org.apache.commons.configuration2.HierarchicalConfiguration;
 import org.craftercms.commons.upgrade.exception.UpgradeException;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.craftercms.studio.api.v2.utils.StudioConfiguration;
 import org.craftercms.studio.impl.v2.upgrade.StudioUpgradeContext;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import javax.sql.DataSource;
 import java.io.File;
@@ -31,7 +31,6 @@ import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import static java.util.stream.Collectors.toList;
 import static org.apache.commons.lang3.StringUtils.isNotEmpty;
 import static org.apache.commons.lang3.StringUtils.removeStart;
 
@@ -48,66 +47,66 @@ import static org.apache.commons.lang3.StringUtils.removeStart;
  */
 public class TemplateRenameUpgradeOperation extends RenameUpgradeOperation {
 
-    private static final Logger logger = LoggerFactory.getLogger(TemplateRenameUpgradeOperation.class);
+	private static final Logger logger = LoggerFactory.getLogger(TemplateRenameUpgradeOperation.class);
 
-    public static final String CONFIG_KEY_BASE_PATH = "basePath";
+	public static final String CONFIG_KEY_BASE_PATH = "basePath";
 
-    /**
-     * Relative path to search matches in the site
-     */
-    protected String basePath;
+	/**
+	 * Relative path to search matches in the site
+	 */
+	protected String basePath;
 
-    public TemplateRenameUpgradeOperation(StudioConfiguration studioConfiguration, DataSource dataSource) {
-        super(studioConfiguration);
-    }
+	public TemplateRenameUpgradeOperation(StudioConfiguration studioConfiguration, DataSource dataSource) {
+		super(studioConfiguration);
+	}
 
-    @Override
-    public void doInit(HierarchicalConfiguration config) {
-        super.doInit(config);
+	@Override
+	public void doInit(HierarchicalConfiguration config) {
+		super.doInit(config);
 
-        basePath = config.getString(CONFIG_KEY_BASE_PATH);
-        oldPath = removeStart(oldPath, File.separator);
-        newPath = removeStart(newPath, File.separator);
-    }
+		basePath = config.getString(CONFIG_KEY_BASE_PATH);
+		oldPath = removeStart(oldPath, File.separator);
+		newPath = removeStart(newPath, File.separator);
+	}
 
-    @Override
-    public void doExecute(final StudioUpgradeContext context) throws UpgradeException {
-        var site = context.getTarget();
-        Path repo = context.getRepositoryPath();
-        Path base;
+	@Override
+	public void doExecute(final StudioUpgradeContext context) throws UpgradeException {
+		var site = context.getTarget();
+		Path repo = context.getRepositoryPath();
+		Path base;
 
-        if (isNotEmpty(basePath)) {
-            base = repo.resolve(removeStart(basePath, File.separator));
-        } else {
-            base = repo;
-        }
+		if (isNotEmpty(basePath)) {
+			base = repo.resolve(removeStart(basePath, File.separator));
+		} else {
+			base = repo;
+		}
 
-        try {
-            List<Path> matches = Files.walk(base)
-                    .filter(path -> base.relativize(path).toString().matches(oldPath))
-                    .map(base::relativize)
-                    .collect(toList());
+		try {
+			List<Path> matches = Files.walk(base)
+				.filter(path -> base.relativize(path).toString().matches(oldPath))
+				.map(base::relativize)
+				.toList();
 
-            logger.debug("Found '{}' matches in site '{}'", matches.size(), site);
+			logger.debug("Found '{}' matches in site '{}'", matches.size(), site);
 
-            for(Path matchedPath : matches) {
-                logger.debug("Process file '{}' in site '{}'", matchedPath, site);
-                Matcher matcher = Pattern.compile(oldPath).matcher(matchedPath.toString());
-                if (matcher.matches()) { // we already know it matches but it needs to be called
-                    String actualPath = newPath;
-                    int total = matcher.groupCount();
-                    for (int i = 1; i <= total; i++) {
-                        actualPath = actualPath.replace("$" + i, matcher.group(i));
-                    }
-                    logger.debug("Rename file '{}' to '{}' in site '{}'", matchedPath, actualPath, site);
-                    renamePath(base.resolve(matchedPath), base.resolve(actualPath));
-                    trackChangedFiles(matchedPath.toString(), actualPath);
-                }
-            }
-        } catch (IOException e) {
-            throw new UpgradeException("Error renaming files " + oldPath + " to " + newPath + " in site " + site, e);
-        }
+			for (Path matchedPath : matches) {
+				logger.debug("Process file '{}' in site '{}'", matchedPath, site);
+				Matcher matcher = Pattern.compile(oldPath).matcher(matchedPath.toString());
+				if (matcher.matches()) { // we already know it matches but it needs to be called
+					String actualPath = newPath;
+					int total = matcher.groupCount();
+					for (int i = 1; i <= total; i++) {
+						actualPath = actualPath.replace("$" + i, matcher.group(i));
+					}
+					logger.debug("Rename file '{}' to '{}' in site '{}'", matchedPath, actualPath, site);
+					renamePath(base.resolve(matchedPath), base.resolve(actualPath));
+					trackChangedFiles(matchedPath.toString(), actualPath);
+				}
+			}
+		} catch (IOException e) {
+			throw new UpgradeException("Error renaming files " + oldPath + " to " + newPath + " in site " + site, e);
+		}
 
-    }
+	}
 
 }
